# nomad

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docs.yml
container/: Dockerfile  build_base_buildah.sh  build_base_docker.sh  build_base_heterogeneous.sh  build_common.sh  git-credentials-k8-secrets.sh  model-card.md  push_oci_manifest.sh
container/demo/: Dockerfile  README.md  nomad-smoke.yml  pyproject.toml
container/demo/src/nomad_demo/: __init__.py  ddpm.py  diffunet2.py  mist.py  pubchem.py
container/deploy/: build_buildah.sh  build_docker.sh  build_heterogeneous.sh
container/deploy/demo/: Dockerfile  nomad.yml  pyproject.toml
container/deploy/demo/src/nomad_demo/: smiles.py
docs/: .gitattributes  Makefile  agent_skills_docs.py  asciinema_player.py  cli_commands.py  conf.py  index.md
docs/_static/: asciinema-player-init.js  custom.css
docs/deployments/: .gitignore  agent-skills.md  deployment-spec.md  guide.md  index.md
docs/guides/: .gitattributes  angled_full_res.h5  angled_half_res.h5  codex-mist.cast  developer.md  getting-started.md  index.md  model-builder.md  nomad_inference.ipynb  ursa-mist.cast
docs/reference/: api-config.md  api-gateway.md  api-hub.md  api-tool-manager.md  api-tools.md  api-torch-module-tool.md  api-well-format.md  cli.rst  config.md  index.md  otel.md
docs/skills/connect-scifm-to-nomad/: SKILL.md
docs/skills/connect-scifm-to-nomad/agents/: openai.yaml
docs/skills/connect-scifm-to-nomad/references/: model-card-template.md  molecular-scfm.md  pde-scfm.md  representation-scfm.md
skills/connect-scifm-to-nomad/: SKILL.md
skills/connect-scifm-to-nomad/agents/: openai.yaml
skills/connect-scifm-to-nomad/references/: model-card-template.md  molecular-scfm.md  pde-scfm.md  representation-scfm.md  testing-guide.md
src/nomad/: __main__.py  _torch_module_compat.py  cli.py  config.py  copycow.py  export.py  fm_base_tool.py  hub.py  logging_utils.py  metrics.py  model_cards.py  otel.py  tensor_codac.py  tool_search.py  torch_tool_manager.py  truststore.py  well_format.py
src/nomad/common/: config_errors.py  env.py  name_sanitize.py  upstream_errors.py
src/nomad/gateway/: cli.py  config.py  sandbox.py  server.py  tool_index.py  upstream.py  wrappers.py
src/nomad/gateway/middleware/: __init__.py  allowlist.py  base.py  logging.py  (+2 more)
src/nomad/tools/: __init__.py
test/: test_cli_main.py  test_config.py  test_copycow.py  test_docs.py  test_env.py  test_export.py  test_git_credentials_k8_secrets.py  test_hub.py  test_model_card_tool.py  test_name_sanitize.py  test_tool_manager.py  test_tool_search.py  test_torch_tool_manager_basic.py  test_truststore.py  test_well_format.py
test/gateway/: check_search.py  test_capture_stdio.py  test_cli.py  test_gateway.py  test_logging.py  test_runner.py  test_telemetry.py  test_workspace.py  test_wrapper_factory.py
test/gateway/tools/: dummy_conflict_server.py  dummy_mcp_server.py  dummy_scifm_server.py
(+7 files in other folders)
