[project]
name = "nomad"
version = "0.1.0"
description = "MCP-Server for SciFMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "filelock>=3.13.0",
    "mcp>=1.20.0,<2.0",
    "pydantic>=2.12.0,<3.0",
    "pyyaml>=6.0.3",
    "tantivy>=0.25.0",
    "torch>=2.9.0",
    "typer>=0.19.2",
    "zstandard>=0.25.0",
    "h5py>=3.15.1",
    "truststore>=0.10.4",
    "huggingface_hub>=0.34.0,<2.0",
    "oras>=0.2.42,<1.0",
    "thefuzz[speedup]>=0.22.1",
]

[project.optional-dependencies]
otel = [
    # API interfaces for tracers, meters, spans, and metric instruments.
    "opentelemetry-api>=1.40.0",
    # SDK providers and processors/readers that collect telemetry in-process.
    "opentelemetry-sdk>=1.40.0",
    # OTLP/gRPC exporters for sending traces and metrics to a collector.
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
]

[project.urls]
source = "https://github.com/lanl/nomad"
homepage = "https://github.com/lanl/nomad"
documentation = "https://lanl.github.io/nomad"
issues = "https://github.com/lanl/nomad/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
lint = [
    "nbstripout>=0.8.1",
    "prek>=0.2.0",
    "ruff==0.14.14",
]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "rust-just>=1.42.0",
]
docs = [
    "furo>=2024.8.6",
    "jupyterlab>=4.4.8",
    "nbconvert>=7.16.6",
    "myst-nb>=1.2.0",
    "matplotlib>=3.8.0",
    "myst-parser>=4.0.1",
    "python-dotenv>=1.1.1",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-click>=6.1.0",
    "sphinx-design>=0.6.1",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-llm>=0.4.1",
]
[project.scripts]
nomad = "nomad.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: tests requiring asyncio",
    "gpu: tests that exercise GPU execution",
]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # Default
    "F401",
    "I001", "UP", # Use 3.9+ style
    "W191", "W291", "W292", "W605", # Whitespace lints
]

[tool.uv.pip]
torch-backend = "auto"
